--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amr-zain.github.io/transactions/",
+  "homepage": "https://amr-zain.github.io/transaction/",
   "name": "transactions",
   "version": "0.1.0",
   "private": true,
